finished personal portfolio odin site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
     />
 
-    <title></title>
+    <title>Odin - Personal Proftolio</title>
   </head>
   <body>
     <div class="header_container width_container">
@@ -25,13 +25,12 @@
         <img
           src="/Images-for-website/header-pic-cropped-with-text.jpg"
           alt=""
+          srcset="
+            /Images-for-website/header-pic-cropped-with-text400px.jpg   400w,
+            /Images-for-website/header-pic-cropped-with-text800px.jpg   800w,
+            /Images-for-website/header-pic-cropped-with-text1000px.jpg 1000w
+          "
         />
-        <!-- <img class="header_img" src="/Images-for-website/header-pic-cropped1600px.jpg" alt=""
-                srcset="
-                /Images-for-website/header-pic-cropped800px.jpg 800w,
-                /Images-for-website/header-pic-cropped400px.jpg 400w,
-                /Images-for-website/header-pic-cropped1600px.jpg 1600w
-                "> -->
       </div>
 
       <div class="introduction">
@@ -61,7 +60,9 @@
       <h1>My work</h1>
       <div class="cards-container">
         <div class="card">
-          <div class="project-pic">screenshot of project</div>
+          <div class="project-pic" id="project-pic-col1">
+            screenshot of project
+          </div>
           <div class="project-text">
             <div class="upper-bar">
               <div>
@@ -87,7 +88,9 @@
           </div>
         </div>
         <div class="card">
-          <div class="project-pic">screenshot of project</div>
+          <div class="project-pic" id="project-pic-col2">
+            screenshot of project
+          </div>
           <div class="project-text">
             <div class="upper-bar">
               <div>
@@ -113,7 +116,9 @@
           </div>
         </div>
         <div class="card">
-          <div class="project-pic">screenshot of project</div>
+          <div class="project-pic" id="project-pic-col3">
+            screenshot of project
+          </div>
           <div class="project-text">
             <div class="upper-bar">
               <div>
@@ -139,7 +144,9 @@
           </div>
         </div>
         <div class="card">
-          <div class="project-pic">screenshot of project</div>
+          <div class="project-pic" id="project-pic-col4">
+            screenshot of project
+          </div>
           <div class="project-text">
             <div class="upper-bar">
               <div>
@@ -165,7 +172,9 @@
           </div>
         </div>
         <div class="card">
-          <div class="project-pic">screenshot of project</div>
+          <div class="project-pic" id="project-pic-col5">
+            screenshot of project
+          </div>
           <div class="project-text">
             <div class="upper-bar">
               <div>
@@ -191,7 +200,9 @@
           </div>
         </div>
         <div class="card">
-          <div class="project-pic">screenshot of project</div>
+          <div class="project-pic" id="project-pic-col6">
+            screenshot of project
+          </div>
           <div class="project-text">
             <div class="upper-bar">
               <div>
@@ -263,6 +274,11 @@
           <img
             src="/Images-for-website/footer-pic.jpg"
             alt="afro woman office pic"
+            srcset="
+              /Images-for-website/footer-pic1000px.jpg 1000w,
+              /Images-for-website/footer-pic800px.jpg   800w,
+              /Images-for-website/footer-pic400px.jpg   400w
+            "
           />
         </div>
       </div>
